# aai

./: .gitignore  pyproject.toml
.github/workflows/: run_tests.yaml
docs/: index.html
outputs/nbs/: aai_notebook.html  aai_notebook.ipynb
src/aai/: data_structures.py  utils.py
tests/: test_data_structures.py  test_utils.py
